# vs2017-raspberry-pi

./: .gitignore  .travis.yml  README.md
example/: .editorconfig  CMakeLists.txt  CMakeSettings.json
example/src/: main.c
raspbian-includes/arm-linux-gnueabihf/c++/6.3.0/bits/: c++config.h
raspbian-includes/arm-linux-gnueabihf/openssl/: opensslconf.h
raspbian-includes/arm-linux-gnueabihf/python2.7/: pyconfig.h
raspbian-includes/linux/: version.h
